--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,6 +1,6 @@
 zend_extension=xdebug
 
 [xdebug]
-xdebug.mode=develop.debug
+xdebug.mode=off
 xdebug.client_host=172.17.0.1
 xdebug.start_with_request=yes
