--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,12 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - 54325:5432
+  rabbitmq:
+    image: rabbitmq:3-management
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER: valera
+      RABBITMQ_DEFAULT_PASS: qwerty
+    ports:
+      - "5672:5672"     # AMQP порт
+      - "15672:15672"   # Web UI порт
