--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,5 @@ services:
       image: redis:alpine
       container_name: redis
       ports:
-          - "6379:6379"
-      php-fpm:
-          depends_on:
-              - redis
+              - "6379:6379"
+      restart: unless-stopped
